	(or ENTER) on the window (the recent default) or via a
	question in the console (the default for other interactive
	devices).  The non-default behaviour may be useful when R is
	driven indirectly (e.g. via ESS) and for some Rterm users.

    o	If the HOME environment variable is not set, Rgui and Rterm
	will set it to match R_USER (as Rcmd does).


UTILITIES

    o	Rcmd sets many more enviroment variables, including all those
	set by R CMD under a Unix-alike which make sense on Windows.

    o	Rcmd now follows a similar strategy to R when finding a valid
	TMPDIR setting: it tries TMPDIR, TMP, TEMP and R_USER looking
	for a directory -- the last will succeed as it does for R.

    o	Rcmd has a new utility open.exe to open files via their file
    	associations.

    o	Rcmd Rd2dvi now opens .dvi and .pdf files via their file
    	associations (if set -- MiKTeX sets 'yap' for .dvi).

    o	Rcmd check now checks the latex of any package vignettes if
	texi2dvi (presumably from MiKTeX) is found on the path.

    o	Package checking (including 'make check') is no longer done in a
    	C locale but in the current locale (although LANGUAGE=en is
    	used).

    o	Rproxy.dll is no longer part of the R distribution: it has
	been replaced by CRAN package rscproxy.


BUG FIXES

    o	winDialog() and winDialogString() check that they are being
	used in an interactive session.

    o	The Korean translation of the RGui menus has been corrected
    	and restored.  (Thanks to June Kim and Seung-ho Kang.)



	**************************************************
	*						 *
	*	       2.7 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.7.2


NEW FEATURES

    o	Rgui has a new menu item 'Html search page' on the Help menu,
	which goes directly to the HTML search form.  This is needed
	by users of Firefox 3, which generates incorrect links in
	search results when the page is accessed via the 'Html help'