@@ -110,6 +110,7 @@ win.metafile <- function(filename = "", width = 7, height = 7, pointsize = 12,
                          restoreConsole = TRUE)
 {
     if(!checkIntFormat(filename)) stop("invalid 'filename'")
+    filename <- path.expand(filename)
     invisible(.External(Cdevga, paste("win.metafile:", filename, sep=""),
                         width, height, pointsize, FALSE, 1L,
                         NA_real_, NA_real_, "white", 1,
@@ -122,6 +123,7 @@ png <- function(filename = "Rplot%03d.png", width = 480, height = 480,
                 pointsize = 12, bg = "white", res = NA, restoreConsole = TRUE)
 {
     if(!checkIntFormat(filename)) stop("invalid 'filename'")
+    filename <- path.expand(filename)
     units <- match.arg(units, c("in", "px", "cm", "mm"))
     if(units != "px" && is.na(res))
         stop("'res' must be specified unless 'units = \"px\"'")
@@ -141,6 +143,7 @@ bmp <- function(filename = "Rplot%03d.bmp", width = 480, height = 480,
                 pointsize = 12, bg = "white", res = NA, restoreConsole = TRUE)
 {
     if(!checkIntFormat(filename)) stop("invalid 'filename'")
+    filename <- path.expand(filename)
     units <- match.arg(units, c("in", "px", "cm", "mm"))
     if(units != "px" && is.na(res))
         stop("'res' must be specified unless 'units = \"px\"'")
@@ -161,6 +164,7 @@ jpeg <- function(filename = "Rplot%03d.jpg", width = 480, height = 480,
                  restoreConsole = TRUE)
 {
     if(!checkIntFormat(filename)) stop("invalid 'filename'")
+    filename <- path.expand(filename)
     units <- match.arg(units, c("in", "px", "cm", "mm"))
     if(units != "px" && is.na(res))
         stop("'res' must be specified unless 'units = \"px\"'")
@@ -182,6 +186,7 @@ tiff <- function(filename = "Rplot%03d.tif", width = 480, height = 480,
                  restoreConsole = TRUE)
 {
     if(!checkIntFormat(filename)) stop("invalid 'filename'")
+    filename <- path.expand(filename)
     units <- match.arg(units, c("in", "px", "cm", "mm"))
     if(units != "px" && is.na(res))
         stop("'res' must be specified unless 'units = \"px\"'")
@@ -222,6 +227,7 @@ savePlot <- function(filename = "Rplot",
     if(devname != "windows") stop("can only copy from 'windows' devices")
     if(filename == "clipboard" && type == "wmf") filename <- ""
     else if(regexpr("\\.",filename) < 0) filename <- paste(filename,type,sep=".")
+    filename <- path.expand(filename)
     invisible(.External(CsavePlot, device, filename, type, restoreConsole))
 }
 
